--- a/app/assets/stylesheets/components/_nav_bar.scss
+++ b/app/assets/stylesheets/components/_nav_bar.scss
@@ -10,6 +10,7 @@ header {
   justify-content: space-between;
   height: 55px;
   font-size: 14px;
+  z-index: 10;
 }
 
 .logo {
